<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/ButtonBar" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="-3dp"
            android:gravity="center"
            android:onClick="backClickHandler"
            android:text="@string/back" >
        </Button>

        <TextView
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="73dp"
            android:text="@string/itraff_api"
            android:textColor="@android:color/white"
            android:textSize="21dp"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:contentDescription="ds"
            android:src="@drawable/itraff_logo1" >
        </ImageView>

        <LinearLayout
            style="@style/Background"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="@string/info_title"
                android:textSize="22dp" >
            </TextView>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/info_1"
                android:textSize="16dp" >
            </TextView>

            <TextView
                android:id="@+id/info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp" >
            </TextView>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>